[project]
name = "ai-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2025.3.30",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "opencv-python>=4.10.0.84",
    "sahi>=0.11.14",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
    "ultralytics>=8.3.23",
    "yolov8>=0.0.2",
]
